# text-generation-gpt

./: .gitignore  README.md  pyproject.toml
ai/: dataset.py  model.py  train.py
service/: main.py  settings.py
service/models/: schema.py
service/routers/: v0.py
service/service/: settings.py
tools/: mongo.py
