[tool.poetry]
name = "text-generation-gpt"
version = "0.1.0"
description = ""
authors = ["Gi DaeHyeon"]
readme = "README.md"
packages = [{include = "text_generation_gpt"}]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.24.0"
Django = "^4.1.3"
pymongo = "^4.3.2"
torch = "^1.13.0"
torchserve = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
